@@ -1,5 +1,8 @@
 2018-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/tiff.c (WritePTIFImage): Allow 1x1 input image to be
+	supported.
+
 	* coders/png.c (ReadOneJNGImage): Unconditionally free JDAT chunk
 	memory.  Fixes oss-fuzz 8366 "graphicsmagick/coder_JNG_fuzzer:
 	Direct-leak in ReadOneJNGImage". (Credit to OSS-Fuzz)
